# mpc-rs

./: Cargo.toml  README.md
examples/: robot.rs
src/: controller.rs  lib.rs  math.rs  robot.rs
