[package]
name = "mpc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.1"
bevy = "0.8.0"
splines = { version = "4.1.1", features = ["nalgebra"] }

[[example]]
name = "robot"
path = "examples/robot.rs"
